<resources>

    <!--    Titles    -->
    <string name="app_name">Live GPS Navigation</string>
    <string name="title_activity_base">Base</string>
    <string name="title_activity_main">Live GPS Route Navigation</string>
    <string name="title_activity_more_options">More Options</string>
    <string name="title_activity_show_route">Show Route</string>
    <string name="title_activity_street_view">Street View</string>
    <string name="title_activity_nearby_places">Nearby Places</string>
    <string name="latitude">Latitude</string>
    <string name="address">Address</string>
    <string name="country">Country</string>
    <string name="longitude">Longitude</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="dialog_location_title">Location Service</string>
    <string name="dialog_location_message">Hey, Your Location is not Enable, please Enable Your Location</string>
    <string name="dialog_location_nagative_button">Cancel</string>
    <string name="dialog_location_positive_button">Ok</string>
    <string name="intestial_ad_unit_id">ca-app-pub-1265462765766610/4874901486</string>
    <string name="banner_ad_unit_id">ca-app-pub-1265462765766610/3398168280</string>
    <!-- Google Api Key -->
    <string name="google_api_key">AIzaSyBPjNwBNgyZ6pNpORegy-3d_qoLPq3r1-A</string>

    <!--    Permissions    -->
    <string name="location_permission_denied">This sample requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Live GPS Route Navigation\'.</string>
    <string name="permission_required_toast">Location permission is required for this application.</string>

    <!-- Default Messages -->
    <string name="default_info_title">Default Location</string>
    <string name="default_info_snippet">No places found, because location permission is disabled.</string>
    <string name="privacy_policy">Privacy Policy</string>

    <!-- Map Activity -->
    <string name="change_map_type">Change Map Type</string>
    <string name="nearby_places">Nearby Places</string>
    <string name="normal_map">Normal</string>
    <string name="hybrid_map">Hybrid</string>
    <string name="terrain_map">Terrain</string>
    <string name="none_map">None</string>
    <string name="satellite_map">Satellite</string>
    <string name="show_route">Show Route</string>
    <string name="directions">Directions</string>
    <string name="street_view">Street View</string>
    <string name="share_location">Share Location</string>
    <string name="copy_location">Copy Location</string>
    <string name="rate">Rate</string>
    <string name="click_here">click here</string>
    <string name="no_internet">Internet not available... Please try again later!!!</string>
    <string name="my_location">My Location</string>
    <string name="place_nearby_me">Place Nearby Me</string>
    <string name="location">My Location</string>
    <string name="title_activity_place_near_by_me">PlaceNearByMeActivity</string>
    <string name="near_by_me">Near By Me</string>
    <string name="near_by_location">Near By Location</string>
    <string name="title_activity_category_list">CategoryListActivity</string>
    <string name="enter_source">Enter Source</string>
    <string name="enter_destination">Enter Destination</string>
    <string name="title_activity_splash">Live GPS Route Navigation</string>

</resources>
